fix(styles): Fix z-index

--- a/src/styles/_side-nav.scss
+++ b/src/styles/_side-nav.scss
@@ -5,7 +5,7 @@
     display: block;
     height: 100vh;
     width: 240px;
-    z-index: 3;
+    z-index: 701;
     position: fixed;
     top: 53px;
     left: 0;
@@ -78,7 +78,7 @@
     display: block;
     height: 100vh;
     width: 100vw;
-    z-index: 2;
+    z-index: 700;
     position: fixed;
     top: 0;
     left: 0;
